<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">TaxiDriver</string>
    <string name="app_title">TaxiDriver.me</string>
	<color name="white">#FFFFFF</color>
	<color name="black">#000000</color>
	
    <!-- WhereAmI -->
    <string name="window_whereami">TaxiDriver.me: Where am I?</string>
    
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    
    <string name="dialog_internet_title">Internet Connection</string>
    <string name="dialog_internet_message">I need an Internet Connection to search Taxi Spots.</string>
    <string name="dialog_internet_btn_settings">Settings</string>
    <string name="dialog_internet_btn_ignore">Ignore</string>
    
    <string name="provider_status_available">Available</string>
    <string name="provider_status_out_of_service">Out-of-service</string>
    <string name="provider_status_unavailable">Unavailable</string>
    
    <string name="provider_msg_change_status">Provider #s changed status to #s</string>
    <string name="provider_msg_provider_enabled">Provider #s has been enabled</string>
    <string name="provider_msg_provider_disabled">Provider #s has been disabled</string>
    <string name="provider_msg_provider_location_changed">Provider/s location has been changed (Lat. #f - Lon. #f)</string>
    <string name="provider_msg_selected">Provider/s selected is #s</string>
    <string name="provider_msg_default_zoom">Default Zoom == #d</string>

    <string name="btn_retrieve_location">Retrieve Location</string>
    <string name="btn_show_cars">Cars</string>
    <string name="btn_show_moto">Moto</string>
    
    <!-- Preferences -->
    <string name="window_settings">TaxiDriver.me: Settings</string>
    
    <string name="pref_localization_enable">Enable</string>
    <string name="pref_localization_enable_desc">Enable Localization Services</string>
    <string name="pref_localization_gps">Can I use GPS?</string>
    <string name="pref_localization_gps_desc">Refine localization throgh GPS Services</string>
    <string name="pref_city">City</string>
    <string name="pref_city_desc">Choose a City to locate Taxi Hotspots</string>
    <string name="pref_cat_localization">Localization</string>
    <string name="pref_cat_localization_desc">Preferences about Localization Services</string>
    <string name="pref_cat_city">Where am I?</string>
    <string name="pref_cat_city_desc">Setup where you are</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_general_desc">General Information</string>
    <string name="pref_version">Version</string>
    <string name="pref_version_desc">Actual TaxiDriver.me Release</string>
    <string name="pref_debug">Debug</string>
    <string name="pref_debug_desc">Debug messages</string>
    
    <string name="msg_pref_saved">Preferences had been saved.</string>
    
    <!-- Changelog -->
    <string name="window_changelog">TaxiDriver.me: Changelog</string>
    
    <string name="btn_changelog_go">Go!</string>
    
    <!-- About -->
    <string name="window_about">TaxiDriver.me: About</string>
    
    <string name="about_version">Version: #s</string>
    <string name="about_developed_by">Developed by:</string>
    <string name="about_also_visit">Also visit:</string>
    
    <string name="about_url_developed_by">http://singularideas.com.br</string>
    <string name="about_url_also_visit_1">http://lefay.com.br</string>
    <string name="about_url_also_visit_2">http://www.rcloja.com.br</string>
    <string name="about_url_also_visit_3">http://loucosporaeromodelismo.com.br</string>
    
    
    
</resources>