<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/pref_cat_city_desc"
        android:title="@string/pref_cat_city" >
        <ListPreference
            android:entries="@array/pref_city_options"
            android:entryValues="@array/pref_city_options"
            android:key="city"
            android:summary="@string/pref_city_desc"
            android:title="@string/pref_city" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/pref_cat_localization_desc"
        android:title="@string/pref_cat_localization" >
        <CheckBoxPreference
            android:key="localization"
            android:summary="@string/pref_localization_enable_desc"
            android:title="@string/pref_localization_enable" />
        <CheckBoxPreference
            android:key="gps"
            android:summary="@string/pref_localization_gps_desc"
            android:title="@string/pref_localization_gps" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/pref_cat_general_desc"
        android:title="@string/pref_cat_general" >
        <EditTextPreference
            android:key="version"
            android:summary="@string/pref_version_desc"
            android:title="@string/pref_version" android:enabled="false"/>
        <CheckBoxPreference android:key="debug" android:summary="@string/pref_debug_desc" android:title="@string/pref_debug" android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>